[project]
name = "sweet-tea-nodes"
description = "Sweet Tea custom nodes for ComfyUI: USDU Pose Tiled and Wan VACE video helpers."
version = "0.1.0"
license = { file = "LICENSE" }
readme = "README.md"
dependencies = [
    "tqdm>=4.66.0",
]

[project.urls]
Repository = "https://github.com/tea-time-labs/sweet-tea-nodes"
Documentation = "https://github.com/tea-time-labs/sweet-tea-nodes#readme"
"Bug Tracker" = "https://github.com/tea-time-labs/sweet-tea-nodes/issues"

[tool.comfy]
PublisherId = "jkotieno"
DisplayName = "Sweet Tea Nodes"
Icon = ""
includes = [
    "__init__.py",
    "wan_vace_dual_strength.py",
    "wan_vace_caps_inpaint.py",
    "usdu_pose_tiled",
    "requirements.txt",
    "README.md",
    "LICENSE",
]
