[project]
name = "sweet-tea-nodes"
description = "Advanced ComfyUI node pack: seam-locked pose tiled upscaling, dual-strength WAN VACE control, and cap-based temporal stitch inpainting."
version = "0.1.0"
license = { file = "LICENSE" }
readme = "README.md"
keywords = [
    "comfyui",
    "upscaling",
    "controlnet",
    "wan",
    "video-inpainting",
]
dependencies = [
    "tqdm>=4.66.0",
]

[project.urls]
Repository = "https://github.com/tea-time-labs/sweet-tea-nodes"
Documentation = "https://github.com/tea-time-labs/sweet-tea-nodes#readme"
"Bug Tracker" = "https://github.com/tea-time-labs/sweet-tea-nodes/issues"

[tool.comfy]
PublisherId = "jkotieno"
DisplayName = "Sweet Tea Nodes"
Icon = ""
includes = [
    "__init__.py",
    "wan_vace_dual_strength.py",
    "wan_vace_caps_inpaint.py",
    "usdu_pose_tiled",
    "requirements.txt",
    "README.md",
    "LICENSE",
]
